--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -150,8 +150,8 @@
                                 <div class="nav__dropdown-collapse">
                                     <div class="nav__dropdown-content">
 
-                                        <a href="/usuario/criar-simulado" class="nav__dropdown-item">Criar Simulado</a>
-                                        <a href="/usuario/Simulados/meus-simulados" class="nav__dropdown-item">Meus
+                                        <a href="/simulados/criar-simulado" class="nav__dropdown-item">Criar Simulado</a>
+                                        <a href="/simulados/meus-simulados" class="nav__dropdown-item">Meus
                                             Simulados</a>
                                         <!-- <a href="/usuario/seleciona-simulado" class="nav__dropdown-item">Consultar simulados</a> -->
 
