--- a/views/simulado/criar-simulado.ejs
+++ b/views/simulado/criar-simulado.ejs
@@ -24,7 +24,7 @@
             <% } %>
             <h1>Criar Simulados</h1>
 
-            <form action="/usuario/criar-simulado" method="POST">
+            <form action="/simulados/criar-simulado" method="POST">
                 <label for="titulo">Título do Simulados:</label>
                 <input type="text" id="titulo" name="titulo" required>
 
