--- a/views/usuario/inicio-logado.ejs
+++ b/views/usuario/inicio-logado.ejs
@@ -26,7 +26,7 @@
 
         <div class="ag-courses_box">
         <div class="ag-courses_item">
-          <a href="/usuario/Simulados/meus-simulados" class="ag-courses-item_link">
+          <a href="/simulados/meus-simulados" class="ag-courses-item_link">
             <div class="ag-courses-item_bg"></div>
 
             <div class="ag-courses-item_title">
@@ -36,7 +36,7 @@
         </div>
 
         <div class="ag-courses_item" ">
-          <a href="/usuario/simulados/visualizar" class="ag-courses-item_link">
+          <a href="/simulados/visualizar" class="ag-courses-item_link">
             <div class="ag-courses-item_bg"></div>
 
             <div class="ag-courses-item_title">
@@ -50,7 +50,7 @@
 
 
         <div class="ag-courses_item">
-          <a href="/usuario/criar-simulado" class="ag-courses-item_link">
+          <a href="/simulados/criar-simulado" class="ag-courses-item_link">
             <div class="ag-courses-item_bg"></div>
 
             <div class="ag-courses-item_title">
