--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,31 +8,31 @@
     box-sizing: border-box;
 }
 
-
-
-
-footer {
-    bottom: 0;
-    position: fixed;
-    text-align: center;
+.overlay {
+    display: none; /* Hidden by default */
+    position: fixed; /* Cover the entire viewport */
+    top: 0;
+    left: 0;
     width: 100%;
-}
-
-footer a {
-    color: rgb(0, 158, 158);
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dark semi-transparent background */
+    z-index: 999; /* Ensure it's above other content */
 }
 
 .editor-container {
-    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 10px;
-    position: absolute;
-    max-width: 85%;
-    max-height: 90%;
-    /* border: 2px solid green; */
+    position: absolute; /* Mude para absolute */
+    z-index: 1000;
+    left: 50%; /* Centraliza horizontalmente */
+    top: 50%; /* Centraliza verticalmente */
+    transform: translate(-50%, -50%); /* Ajusta a posição para o centro */
+    max-width: 100%;
+    max-height: 100%;
+
 }
 
 .symbols-container{
@@ -42,8 +42,7 @@ footer a {
     align-items: center;
     flex-wrap: wrap;
     gap: 5px;
-    width: 600px;
-    height: 200px;
+    width: 800px;
     background-color: rgb(255, 255, 255);
     padding: 10px 10px 10px 10px;
     border:1px solid rgb(210, 210, 210);
@@ -108,13 +107,13 @@ footer a {
     justify-content: center;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 500px;
-   
+    width: 600px;
     padding: 20px;
     border:1px solid rgb(210, 210, 210);
     border-radius: 7px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.193);
     /* border: 2px solid rgb(255, 0, 0); */
+   
 }
 
 .editor-close-btn {
