--- a/views/partials/editorEquacao.ejs
+++ b/views/partials/editorEquacao.ejs
@@ -1,3 +1,5 @@
+<!-- <div  class="modal">
+    <div class="modal-content"> -->
 <div class="editor-container hide" id="editor-box">
 
     <div class="symbols-container " id="symbols-box">
@@ -113,7 +115,7 @@
                         <button type="button"  id="logical-negation-btn"><img src="/img/logic/logical-negation.svg" alt=""></button>
                         <button type="button"  id="logical-equivalence-single"><img src="/img/logic/logical-equivalence-single.svg" alt=""></button>
                         <button type="button"  id="short-right-arrow-btn"><img src="/img/logic/short-right-arrow.svg" alt=""></button>
-                        <!-- <button id="long-right-arrow-btn"><img src="/img/logic/long-right-arrow.svg" alt=""></button> -->
+                        <!-- <button id="long-right-arrow-btn"><img src="/img/logic/long-right-arrow.svg" alt=""></button> --> 
                     </div>
                     <div>
                         <button type="button"  id="tautology-btn"><img src="/img/logic/tautology.svg" alt=""></button>
@@ -186,24 +188,21 @@
             </div>
         </div>
     </div>
-    <div class="equation-editor">
+    <div class="equation-editor" >
         <div>
             <button type="button"  class="editor-close-btn" id="editor-close-btn">&times</button>
         </div>
         
-        <div type="text" class="equation-preview" style="display:none;">
+        <div type="text" class="equation-preview" >
             <span id="equation-preview"></span>
            
         </div>
       
  
-    
-        <!-- <div type="text" class="equation-preview">
-            <textarea id="equation-preview"></textarea>
-        </div> -->
+
 
         <div class="item">
-            <!-- <input type="text" id="equation-input" style="width: 100%;"> -->
+            <!-- <input type="text" id="equation-input" style="width: 100%;"> --> 
             <textarea name="" id="equation-input"></textarea>
             <div class="equation-btn-box" >
                 <button type="button"  id="symbols-box-btn">&#x2630</button>
@@ -217,8 +216,20 @@
 
 </div>
 
+<!-- </div>
+</div> -->
+<!-- <div id="modal-editor-equacao" class="modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2>Criar Novo Tópico</h2>
+            <button type="button" id="close-modal">Fechar</button>
+        </div>
 
-<style>
-    /* Adicionando estilo básico para o editor */
+        
+        
 
-</style>
+
+       
+
+    </div>
+</div> -->
