update equation editor position based on button

--- a/views/professor/editar-questao.ejs
+++ b/views/professor/editar-questao.ejs
@@ -43,7 +43,7 @@
                         <h4>Enunciado</h4>
 
                         <button type="button" id="delta" style="display:none; " disabled>Show delta in console</button>
-                        <button type="button" id="editor-open-btn"> Adicionar Equação</button>
+                        <button type="button" id="editor-open-btn" style="display:none; "> Adicionar Equação</button>
                         <%- include('../partials/editorEquacao') %>
                             <div id="editor-container" style="height:150px;"></div>
 
